# thedude

./: Dockerfile  README.md  pyproject.toml
tests/: test_thedude.py
